# python-web-skill-adapter-adk

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: tutorial.md  web-skill-spec.md
web_skill_adapter/: __init__.py  agent.py  cli.py  config.py  discovery.py  dynamic_tools.py  models.py
